# linux-in-practice-2nd

./: README.md  pyproject.toml
01-operating-system-overview/: .gitignore
03-process-scheduler/: .gitignore
